# usb_hid_magstripe_reader

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
